--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "@angular-devkit/build-angular": "^16.0.4",
     "@angular/cli": "~16.0.4",
     "@angular/compiler-cli": "^16.0.0",
+    "@types/dotenv": "^8.2.0",
     "@types/jasmine": "~4.3.0",
     "autoprefixer": "^10.4.16",
+    "dotenv": "^16.3.1",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
